# BY-Yellow-Taxis

./: README.md  create_report.py  data_exploration.ipynb  parquet_file_handling.py  plotting.py  pyproject.toml  time_wise_averaging.py  tinyflux_helpers.py
helpers/: constants.py  parquet_file_handling.py  plotting.py  report.py  time_wise_averaging.py
reports/: plots.html
tests/: test_parquet_file_handling.py  test_time_wise_averaging.py  test_tinyflux_helpers.py
