[tool.poetry]
name = "by-yellow-taxis"
version = "0.1.0"
description = ""
authors = ["SvenWarnke <sven@ge-warnke.de>"]
readme = "README.md"
packages = [{include = "by_yellow_taxis"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
jupyter = "^1.0.0"
plotly = "^5.20.0"
pyarrow = "^15.0.2"
pytest = "^8.1.1"
ruff = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
